--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
 	<link rel='stylesheet' href='/build/bundle.css'>
 
 	<script defer src='/build/bundle.js'></script>
+
+	<script src="./js/bootstrap.bundle.min.js"></script>
+	<link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
 
 <body>
