--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,12 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte app</title>
+	<title>sample text</title>
 
 	<link rel='icon' type='image/png' href='./favicon.png'>
-	<link rel='stylesheet' href='./global.css'>
-	<link rel='stylesheet' href='./build/bundle.css'>
-
+	<link rel='stylesheet' href='./vendor/bootstrap/css/bootstrap.min.css'>
+	<script src="./vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 	<script defer src='./build/bundle.js'></script>
-
-	<script src="./js/bootstrap.bundle.min.js"></script>
-	<link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
 
 <body>
